caso de uso categoria

--- a/cookbook/nbproject/project.properties
+++ b/cookbook/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/cookbook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.postgresql-42.1.4.jar=Y:\\Yan\\Femass\\Desenvolvimento de Sistemas I\\NetBeansProjects\\SGArtesanato\\lib\\postgresql-42.1.4.jar
+file.reference.postgresql-42.1.4.jar=lib/postgresql-42.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
