--- a/cookbook/nbproject/project.properties
+++ b/cookbook/nbproject/project.properties
@@ -33,7 +33,9 @@ file.reference.postgresql-42.1.4.jar=lib/postgresql-42.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.1.4.jar}
+    ${file.reference.postgresql-42.1.4.jar}:\
+    ${libs.beans-binding.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
