--- a/cookbook/nbproject/project.properties
+++ b/cookbook/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cookbook.Cookbook
+main.class=br.rj.macae.femass.receitas.gui.TelaPrincipalGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
